--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#0eb0b2</color>
-    <color name="colorPrimaryDark">#006778</color>
+    <color name="colorPrimary">#5AB7B8</color>
+    <color name="colorPrimaryDark">#179191</color>
     <color name="colorAccent">#ffcc0c</color>
 </resources>
